--- a/fdcSearcherSite/style.css
+++ b/fdcSearcherSite/style.css
@@ -1,74 +1,44 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 .grid {
   display: grid;
-  grid-template-columns: repeat(12, auto);
-  gap: 10px;
-  justify-content: center;
+  grid-template-columns: 150px auto 150px;
+  grid-gap: 1em;
 }
 
-.container {
-          display: flex;
-          flex-direction: column;
-      }
-
-      .container__main {
-          /* Take the remaining height */
-          flex-grow: 1;
-
-          /* Layout the left sidebar, main content and right sidebar */
-          display: flex;
-          flex-direction: row;
-      }
-
-      .container__left {
-          width: 25%;
-      }
-
-      .container__middle {
-          /* Take the remaining width */
-          flex-grow: 1;
-      }
-
-      .container__right {
-          width: 20%;
-      }
-
-.header {
-                        /* Stick to the top */
-                        position: sticky;
-                        top: 0;
-                    }
-
-.button-37 {
-  background-color: #13aa52;
-  border: 1px solid #13aa52;
-  border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  outline: none;
-  outline: 0;
-  padding: 10px 25px;
-  text-align: center;
-  transform: translateY(0);
-  transition: transform 150ms, box-shadow 150ms;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+header,
+footer {
+  grid-column: 1 / 4;
 }
 
-.button-37:hover {
-  box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
-  transform: translateY(-2px);
-}
-
-@media (min-width: 768px) {
-  .button-37 {
-    padding: 10px 30px;
+@media all and (max-width: 700px) {
+  aside,
+  article {
+    grid-column: 1 / 4;
   }
 }
 
+/* Demo Specific Styles */
+body {
+  margin: 0 auto;
+  max-width: 56em;
+  padding: 1em 0;
+}
+
+header,
+aside,
+article,
+footer {
+  background: #eaeaea;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 25vh;
+}
+
+.box {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+}
+
+.seach-all {
+  grid-column: span 2;
+}
